--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
 
 	<script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
   
-    <title>Presh</title>
+    <title>Weather App</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
